core/compiler/tests/programs/type_err/compare_functions.loz
f x
| g != h = x
= x + 1
where
    g x = x + 1
    h x = x - 1
.

main = f 1